Update yaml files questions and survey blueprints

--- a/src/data/questions.yaml
+++ b/src/data/questions.yaml
@@ -70,3 +70,9 @@
     integer: true
   subjectType: project
   active: true
+-
+  id: 933463ae-241a-4f70-824d-551be84da271
+  body: |
+    Describe your implementation plan
+  responseType: text
+  active: true
