--- a/src/data/questions.yaml
+++ b/src/data/questions.yaml
@@ -10,6 +10,26 @@
 # - you should never replace an item completely while keeping the UUID the same
 # - if you don't know what you're doing, ask!
 -
+  id: 0578b6c2-2596-40cc-a7d6-6e0bf5313968
+  body: |
+    Please provide the URL(s) to all PR(s) submitted for your work this week:
+
+    "{{URL}}"
+  responseType: text
+  feedbackTypeId:  535c45b6-489b-43c0-83f0-6cc896c2411a
+  subjectType: project
+  active: true
+-
+  id: d47feb36-2d24-470c-9d4c-b76ecbf390d1
+  body: |
+    Describe how much of your original work plan you were able to complete:
+
+    "I originally planned to complete {{this much}} and completed {{this much}}..."
+  responseType: text
+  feedbackTypeId:  d526e02d-0617-48ab-b243-3b6054decb31
+  subjectType: member
+  active: true
+-
   id: cd350a14-8a70-4593-9801-30cedab3dc75
   body: |
     Give feedback to your teammate by completing the following sentence:
