Changes feedbackTypeId to use feedback-types yaml

--- a/src/data/questions.yaml
+++ b/src/data/questions.yaml
@@ -14,9 +14,9 @@
   body: |
     Please provide the URL(s) to all PR(s) submitted for your work this week:
 
-    "{{URL}}"
+    "URL(s)"
   responseType: text
-  feedbackTypeId:  535c45b6-489b-43c0-83f0-6cc896c2411a
+  feedbackTypeId:  81b7085c-1c3e-4066-80a7-d5ac3b7fa838
   subjectType: project
   active: true
 -
@@ -24,10 +24,10 @@
   body: |
     Describe how much of your original work plan you were able to complete:
 
-    "I originally planned to complete {{this much}} and completed {{this much}}..."
+    "I originally planned to complete 'this much' and completed 'this much'..."
   responseType: text
-  feedbackTypeId:  d526e02d-0617-48ab-b243-3b6054decb31
-  subjectType: member
+  feedbackTypeId:  81b7085c-1c3e-4066-80a7-d5ac3b7fa838
+  subjectType: project
   active: true
 -
   id: cd350a14-8a70-4593-9801-30cedab3dc75
