changed word in one question; created db migration

--- a/src/data/questions.yaml
+++ b/src/data/questions.yaml
@@ -12,7 +12,7 @@
 -
   id: 0578b6c2-2596-40cc-a7d6-6e0bf5313968
   body: |
-    Please provide the URL(s) to all PR(s) submitted for your work this week:
+    Please provide the URL(s) to any PR(s) submitted for your work this week:
 
     "URL(s)"
   responseType: text
