--- a/src/data/questions.yaml
+++ b/src/data/questions.yaml
@@ -75,4 +75,8 @@
   body: |
     Describe your implementation plan
   responseType: text
+  feedbackTypeId: 81b7085c-1c3e-4066-80a7-d5ac3b7fa838
+  validationOptions:
+    required: true
+  subjectType: project
   active: true
